Enhance onboarding and home screen functionality
- Added onboarding process with multiple steps for user data collection.
- Implemented HomeContent component to display personalized content based on onboarding data.
- Updated SSOCallback to handle authentication state and redirection.
- Refactored LoadingScreen to accept dynamic messages for better user feedback.
- Updated eas.json for environment variables and package.json for dependency versions.
- Introduced new Convex queries and mutations for onboarding data management.
- Cleaned up unused components and optimized imports across the application.

--- a/eas.json
+++ b/eas.json
@@ -7,6 +7,11 @@
     "development": {
       "developmentClient": true,
       "distribution": "internal",
+      "environment": "development",
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "$EXPO_PUBLIC_CONVEX_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+      },
       "android": {
         "image": "latest"
       },
@@ -23,6 +28,11 @@
     "preview": {
       "distribution": "internal",
       "channel": "main",
+      "environment": "preview",
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "$EXPO_PUBLIC_CONVEX_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+      },
       "android": {
         "image": "latest"
       },
@@ -33,6 +43,11 @@
     "production": {
       "channel": "production",
       "autoIncrement": true,
+      "environment": "production",
+      "env": {
+        "EXPO_PUBLIC_CONVEX_URL": "$EXPO_PUBLIC_CONVEX_URL",
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY"
+      },
       "android": {
         "image": "latest"
       },
