--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "convex": "^1.29.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.25",
     "expo-auth-session": "~7.0.9",
     "expo-constants": "~18.0.9",
@@ -38,6 +39,7 @@
     "expo-system-ui": "~6.0.7",
     "expo-updates": "~29.0.12",
     "expo-web-browser": "~15.0.7",
+    "openai": "^6.9.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
